--- a/2nd3dunitygame/unity files/2nd Unity Game/Assembly-CSharp.csproj
+++ b/2nd3dunitygame/unity files/2nd Unity Game/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\objectsScript.cs" />
+     <Compile Include="Assets\Scripts\rock.cs" />
  <Reference Include="Facebook.Unity.Settings">
  <HintPath>/home/map/Downloads/git/unity/2nd3dunitygame/unity files/2nd Unity Game/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
