--- a/2nd3dunitygame/unity files/2nd Unity Game/Assembly-CSharp.csproj
+++ b/2nd3dunitygame/unity files/2nd Unity Game/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\objectsScript.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\rock.cs" />
