--- a/unity2d/unity files/Tower Defense/Assembly-CSharp.csproj
+++ b/unity2d/unity files/Tower Defense/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\loader.cs" />
  <Reference Include="Facebook.Unity.Settings">
