--- a/unity2d/unity files/Tower Defense/Assembly-CSharp.csproj
+++ b/unity2d/unity files/Tower Defense/Assembly-CSharp.csproj
@@ -53,7 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Scripts\loader.cs" />
+     <Compile Include="Assets\Scripts\Singelton.cs" />
  <Reference Include="Facebook.Unity.Settings">
  <HintPath>/home/map/Downloads/git/unity/unity2d/unity files/Tower Defense/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
